fix header paddings, slider controlls paint to \#999, TopNav on tablet

--- a/src/assets/scss/adaptive-sass-config.scss
+++ b/src/assets/scss/adaptive-sass-config.scss
@@ -2,9 +2,12 @@
 
 $list: (
   xs: 0,
+  smx: 376px,
   sm: 576px,
+  xsm: 700px,
   md: 768px,
   lg: 992px,
+  xlg: 998px,
   xl: 1200px,
   xxl: 1360px,
   xxxl: 1400px,
